...
        "description": "Home page app bar subtitle"
    },
    "details": "Details",
    "@details": {
        "description": "Details button label"
    },
    "order": "Order Now",
    "@order": {
        "description": "Order button label"
    },
    "cart": "Cart",
    "@cart": {
        "description": "Cart"
...
        "description": "Cart page app bar subtitle"
    },
    "remains": "units in stock",
    "@remains": {
        "description": "Unit in stock"
    },
    "no_more_data": "No more data to load",
    "@no_more_data": {
        "description": "No more data"
    },
    "item_code": "Item Code:",
    "@item_code": {
        "description": "Item code"
...
