...
                  ElevatedButton(
                    onPressed: () {
                      FirebaseInAppMessaging.instance.triggerEvent('something');
                    },
                    child: const Text('Test'),
                  ),
                  const Text('You are not signed in'),
                  ElevatedButton(
                    onPressed: () => Navigator.push(
                      context,
                      MaterialPageRoute(builder: (context) => LoginPage()),
                    ),
                    child: const Text('Login'),
                  ),
                ],
              );
            } else if (state is AuthLoading) {
              return const Center(child: CircularProgressIndicator());
            } else if (state is AuthLoaded) {
...
