...
                              ),
                              TextButton(
                                onPressed: () {
                                  removeItem(context, order);
                                  Navigator.pop(context);
                                },
                                child: const Text('Remove'),
                              ),
                            ],
                          ),
                        );
                      },
                      child: const Icon(
...
